Config first step for Go Async by Redis worker
